# advanced-os-zephyr

./: .gitignore  NOS- IOT OS Arhitekture i komponente.pptx  README.md
applications/app1/: CMakeLists.txt  prj.conf
applications/app1/src/: main.c
